--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   json_reflectable: ^1.0.1
   dart_mappable: ^3.1.3
   collection: ^1.17.1
+  syncfusion_flutter_datepicker: ^23.1.36
+  logger: ^2.0.2+1
 
 
 dev_dependencies:
